--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,115 +1,53 @@
 name: sppdn
 description: "A new Flutter project."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.8.1
+  sdk: '>=3.3.0 <4.0.0' # Perluas jangkauan SDK agar lebih fleksibel
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # Core
   cupertino_icons: ^1.0.8
-  get: ^4.7.2
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.15.3
-  google_sign_in: ^6.1.6
-  cloud_firestore: ^4.17.3
-  flutter_native_splash: ^2.4.6
+  get: ^4.6.6 # PERBAIKAN: Versi stabil yang benar
+
+  # Firebase - Versi stabil dan kompatibel
+  firebase_core: ^2.27.1
+  firebase_auth: ^4.17.9
+  cloud_firestore: ^4.15.9
+  firebase_storage: ^11.6.10
+  google_sign_in: ^6.2.1 # REKOMENDASI: Versi stabil terbaru
+
+  # Utilitas
+  flutter_native_splash: ^2.4.0 # Sesuaikan dengan versi SDK, 2.4.0 lebih aman
+  image_picker: ^1.0.7
+  flutter_image_compress: ^2.2.0
+  intl: ^0.19.0
+  cached_network_image: ^3.3.1
+  path_provider: ^2.1.2 # Tambahkan path_provider yang mungkin terlewat
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^6.0.0
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+  flutter_lints: ^3.0.0 # PERBAIKAN: Versi stabil yang benar
 
 flutter_native_splash:
-  # Warna background splash screen. Buatlah sama dengan background logo Anda
-  # agar terlihat menyatu. Gunakan kode hex.
-  color: "#FFFFFF" # <-- Ganti ke #FFFFFF untuk putih
-
-  # Path ke file logo Anda.
+  color: "#FFFFFF"
   image: assets/logo.png
-
-  # (Opsional) Untuk Android 12+, splash screen memiliki gaya yang berbeda.
-  # Package ini akan secara otomatis membuat versi yang kompatibel.
   android_12:
     image: assets/logo.png
-    color: "#FFFFFF" # <-- Background untuk Android 12+
-
-  # Aktifkan untuk platform yang Anda targetkan
+    color: "#FFFFFF"
   android: true
   ios: true
   web: false
 
-# The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
   assets:
     - assets/google_logo.png
     - assets/logo.png
-
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
