--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,10 @@ dependencies:
   firebase_core: ^2.27.1
   firebase_auth: ^4.17.9
   cloud_firestore: ^4.15.9
-  firebase_storage: ^11.6.10
+  # firebase_storage: ^11.6.10
   google_sign_in: ^6.2.1 # REKOMENDASI: Versi stabil terbaru
+
+  http: ^1.2.1
 
   # Utilitas
   flutter_native_splash: ^2.4.0 # Sesuaikan dengan versi SDK, 2.4.0 lebih aman
