--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   intl: ^0.19.0
   cached_network_image: ^3.3.1
   path_provider: ^2.1.2 # Tambahkan path_provider yang mungkin terlewat
+  photo_view: ^0.15.0
 
 dev_dependencies:
   flutter_test:
