--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cached_network_image: ^3.3.1
   path_provider: ^2.1.2 # Tambahkan path_provider yang mungkin terlewat
   photo_view: ^0.15.0
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
