--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,13 @@ dependencies:
   flutter_image_compress: ^2.2.0
   intl: ^0.19.0
   cached_network_image: ^3.3.1
-  path_provider: ^2.1.2 # Tambahkan path_provider yang mungkin terlewat
   photo_view: ^0.15.0
   get_storage: ^2.1.1
+
+  excel: ^4.0.0
+  permission_handler: ^11.3.1
+  path_provider: ^2.1.3
+  open_filex: ^4.4.0
 
 dev_dependencies:
   flutter_test:
